dcache-info: remove deprecated type conversion
Motivation:
Modification:
Replace deprecated Float(double) with static factory method valueOf(float).

Result:
Less deprecated code.

Target: master
Requires-notes: no
Requires-book: no
Patch: https://rb.dcache.org/r/12979
Acked-by: Paul Millar